feat: criação de paginas de galeria

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-menu-bar></app-menu-bar>
-<app-cards-galeria></app-cards-galeria>
-<app-footer></app-footer>
+  <app-menu-bar></app-menu-bar>
+
+  <router-outlet></router-outlet>
+
+  <app-footer></app-footer>
