--- a/src/app/components/cards-galeria/cards-galeria.component.html
+++ b/src/app/components/cards-galeria/cards-galeria.component.html
@@ -1,15 +1,20 @@
 <div class="card__container">
   <div class="card">
-    <img class="card__image" src="../../../assets/logo_HIVE.jpeg" alt="Card Image">
-    <h3>JPV TECH</h3>
-    <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
-      tecnologia e
-      inteligência artificial à sua empresa!</p>
+    <a routerLink="empresa">
+      <img class="card__image" src="../../../assets/logo_HIVE.jpeg" alt="Card Image">
+      <h3 class="card__title">GALERIA TECH</h3>
+      <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
+        tecnologia e
+        inteligência artificial à sua empresa!</p>
+    </a>
   </div>
   <div class="card">
-    <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
-    <h3>TOP FILMES</h3>
-    <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    <a routerLink="filmes">
+
+      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
+      <h3>TOP FILMES</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
   </div>
 </div>
-<a href=""></a>
+<router-outlet></router-outlet>
