--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,12 +1,12 @@
 footer {
-  position: absolute;
-  bottom: 0;
+
   background-color: #333;
   color: #fff;
   padding: 20px 0;
   width: 100%;
-  max-height: 10vh;
+
   text-align: center;
+
 }
 
 .footer-links a {
@@ -31,4 +31,5 @@ img{
 
 p {
    color: white;
+   margin-bottom: 0;
 }
