--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -2,10 +2,9 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  position: fixed;
   width: 100%;
   height: 3.5rem;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
 }
 .menubar__logo {
@@ -16,11 +15,10 @@
   margin: 30px;
   font-size: 30px;
 }
-.menubar__logo__image{
+.menubar__logo__image {
   width: 140px;
   height: 55;
   margin: 0;
-
 }
 .menubar__itens {
   align-items: center; /* Centraliza verticalmente */
@@ -48,7 +46,6 @@
 }
 .menubar__itens ul li a:hover {
   color: #f2af00;
-
 }
 
 .menubar__itens__mobile {
@@ -73,18 +70,25 @@ mat-icon {
   .menubar__visible {
     display: block;
   }
+
   .menubar__itens__mobile {
-    position: fixed;
+    display: flex;
+    justify-content: center;
+    position: absolute;
     opacity: 1;
     visibility: visible;
     margin: 15px;
+    flex-direction: column;
+    left: 5px;
+    max-width: 50vw;
+  }
+  .menubar__itens__mobile ul li {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-  }
-  .menu__itens__link {
-    width: 100vw;
-    height: 100vh;
+    list-style: none;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 20px;
   }
 
   mat-icon {
