FEAT: customização  cards

--- a/src/app/components/pages/galeria-filmes/galeria-filmes.component.css
+++ b/src/app/components/pages/galeria-filmes/galeria-filmes.component.css
@@ -1,25 +1,14 @@
-.galeria__container {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
-  height: max-content;
-  margin-bottom: 55px;
-  overflow: hidden;
-}
-
 .card__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 5px;
   padding-top: 6.5rem;
+  min-height: 80vh;
 }
 
 .card {
-  width: 250px;
+  width: 300px;
   margin: 10px 30px 0px 0px;
   box-shadow: 2px 2px 10px #ccc;
 }
@@ -36,6 +25,7 @@
 
 .card img {
   width: 100%;
+  max-height: 250px;
 }
 
 .card__image:hover {
