--- a/src/app/components/pages/galeria-filmes/galeria-filmes.component.html
+++ b/src/app/components/pages/galeria-filmes/galeria-filmes.component.html
@@ -1,11 +1,44 @@
-<div class="galeria__container">
+<div class="card__container">
   <div class="card">
-    <a>
-      <img class="card__image" src="../../../../assets/imagem_card1.jpg" alt="Card Image">
-      <h3 class="card__title">JPV TECH</h3>
+    <a routerLink="empresa">
+      <img class="card__image" src="../../../assets/logo_HIVE.jpeg" alt="Card Image">
+      <h3 class="card__title">GALERIA TECH</h3>
       <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
         tecnologia e
         inteligência artificial à sua empresa!</p>
     </a>
   </div>
+  <div class="card">
+    <a routerLink="filmes">
+
+      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
+      <h3>TOP FILMES</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+
+      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
+      <h3>TOP FILMES</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+
+      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
+      <h3>TOP FILMES</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+
+      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
+      <h3>TOP FILMES</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
 </div>
+<router-outlet></router-outlet>
