--- a/src/app/components/pages/galeria-empresa/galeria-empresa.component.html
+++ b/src/app/components/pages/galeria-empresa/galeria-empresa.component.html
@@ -1,7 +1,7 @@
 <div class="card__container">
   <div class="card">
     <a routerLink="empresa">
-      <img class="card__image" src="../../../assets/logo_HIVE.jpeg" alt="Card Image">
+      <img class="card__image" src="../../../../assets/tec1.jpg" alt="Card Image">
       <h3 class="card__title">GALERIA TECH</h3>
       <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
         tecnologia e
@@ -10,9 +10,29 @@
   </div>
   <div class="card">
     <a routerLink="filmes">
-
-      <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
-      <h3>TOP FILMES</h3>
+      <img class="card__image" src="../../../../assets/tec2.jpg" alt="Card Image">
+      <h3>GALERIA TECH</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+      <img class="card__image" src="../../../../assets/tec3.jpg" alt="Card Image">
+      <h3>GALERIA TECH</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+      <img class="card__image" src="../../../../assets/tec4.jpg" alt="Card Image">
+      <h3>GALERIA TECH</h3>
+      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+    </a>
+  </div>
+  <div class="card">
+    <a routerLink="filmes">
+      <img class="card__image" src="../../../../assets/tec5.jpg" alt="Card Image">
+      <h3>GALERIA TECH</h3>
       <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
     </a>
   </div>
