fit: consumindo a api de pokedex

--- a/src/app/components/cards-galeria/cards-galeria.component.html
+++ b/src/app/components/cards-galeria/cards-galeria.component.html
@@ -3,20 +3,22 @@
     <a routerLink="empresa">
       <img class="card__image" src="../../../assets/logo_HIVE.jpeg" alt="Card Image">
       <h3 class="card__title">GALERIA TECH</h3>
-      <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
-        tecnologia e
-        inteligência artificial à sua empresa!</p>
+      <p class="card__about">JPV Technology & Innovation
+        Automação inovadora para negócios digitais
+        Provendo soluções de arquitetura de informação, sistemas e infraestrutura focadas no negócio da sua empresa.</p>
     </a>
   </div>
   <div class="card">
     <a routerLink="filmes">
 
       <img class="card__image" src="../../../assets/1141570.png" alt="Card Image">
-      <h3>TOP FILMES</h3>
-      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+      <h3>TOP POKEMONS</h3>
+      <p class="card__about">Pokémon é uma franquia de mídia que pertence a The Pokémon Company, tendo sido criada por
+        Satoshi Tajiri em 1995. Ela é centrada em criaturas ficcionais chamadas "Pokémon", que os seres humanos capturam
+        e os treinam para lutarem entre si com seus ataques de diversos tipos.</p>
     </a>
   </div>
-  
+
 </div>
 
 <router-outlet></router-outlet>
