--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a routerLink="/">HOME</a></li>
         <li><a routerLink="empresa">GALERIA TECH</a></li>
-        <li><a routerLink="filmes">GALERIA DE FILMES</a></li>
+        <li><a routerLink="filmes">GALERIA DE POKEMONS</a></li>
       </ul>
     </div>
     <div class="menubar__container__mobile">
@@ -20,7 +20,7 @@
         <ul>
           <li><a routerLink="/" (click)="toggleNavbar()" class="menu__itens__link">HOME</a></li>
           <li><a routerLink="empresa" (click)="toggleNavbar()" class="menu__itens__link">GALERIA TECH</a></li>
-          <li><a routerLink="filmes" (click)="toggleNavbar()" class="menu__itens__link">GALERIA DE FILMES</a></li>
+          <li><a routerLink="filmes" (click)="toggleNavbar()" class="menu__itens__link">GALERIA DE POKEMONS</a></li>
         </ul>
       </div>
     </div>
