--- a/src/app/components/pages/galeria-empresa/galeria-empresa.component.html
+++ b/src/app/components/pages/galeria-empresa/galeria-empresa.component.html
@@ -11,29 +11,32 @@
   <div class="card">
     <a routerLink="filmes">
       <img class="card__image" src="../../../../assets/tec2.jpg" alt="Card Image">
-      <h3>GALERIA TECH</h3>
-      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+      <h3>Atitude colaborativa</h3>
+      <p class="card__about">Agimos com empatia e compartilhamos opiniões e diferentes conhecimentos, pois, assim,
+        crescemos juntos.</p>
     </a>
   </div>
   <div class="card">
     <a routerLink="filmes">
       <img class="card__image" src="../../../../assets/tec3.jpg" alt="Card Image">
-      <h3>GALERIA TECH</h3>
-      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+      <h3>Inovação</h3>
+      <p class="card__about">Atuamos preventivamente com foco no desenvolvimento de estratégias que viabilizam ganhos em
+        produtividade, redução de custos, além de avanços em tempo e qualidade do produto final</p>
     </a>
   </div>
   <div class="card">
     <a routerLink="filmes">
-      <img class="card__image" src="../../../../assets/tec4.jpg" alt="Card Image">
-      <h3>GALERIA TECH</h3>
-      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+      <img class="card__image" src="../../../../assets/img-13.jpg" alt="Card Image">
+      <h3>Missão</h3>
+      <p class="card__about">Facilitar os processos que integram pessoas e sistemas, através da gestão do
+        desenvolvimento de software focada nas necessidades de cada cliente.</p>
     </a>
   </div>
   <div class="card">
     <a routerLink="filmes">
-      <img class="card__image" src="../../../../assets/tec5.jpg" alt="Card Image">
-      <h3>GALERIA TECH</h3>
-      <p class="card__about">Descubra os melhores filmes de acordo com imdb.</p>
+      <img class="card__image" src="../../../../assets/startup.jpeg" alt="Card Image">
+      <h3>Visão</h3>
+      <p class="card__about">Ser referência nacional em tecnologia e inovação para automação de negócios digitais.</p>
     </a>
   </div>
 </div>
