fit: finalização do menu bar

--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -21,8 +21,10 @@
   margin: 0;
 }
 .menubar__itens {
-  align-items: center; /* Centraliza verticalmente */
+  align-items: center;
   display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
 
 .menubar__itens ul {
