--- a/src/app/components/pages/galeria-filmes/galeria-pokemon.component.css
+++ b/src/app/components/pages/galeria-filmes/galeria-pokemon.component.css
@@ -7,7 +7,14 @@
   min-height: 80vh;
   margin-bottom: 25px;
 }
-
+.card__title-main {
+  position: relative;
+  color: #2d353c;
+  font-weight: 700;
+  bottom: 59px;
+  width: 100%;
+  left: 71px;
+}
 .card {
   width: 300px;
   margin: 10px 30px 0px 0px;
