--- a/src/app/components/pages/galeria-pokemon/galeria-pokemon.component.html
+++ b/src/app/components/pages/galeria-pokemon/galeria-pokemon.component.html
@@ -4,9 +4,9 @@
     <a routerLink="empresa">
       <img class="card__image" src="{{getPokemonImage(+pokemon.url.split('/')[6])}}" alt="Card Image">
       <h3 class="card__title">{{ pokemon.name}}</h3>
-      <p class="card__about">Conheça nossa plataforma de automação de negócios digitais. Descubra como podemos agregar
-        tecnologia e
-        inteligência artificial à sua empresa!</p>
+      <p class="card__about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia est eum enim minima. Eos
+        explicabo laboriosam labore dolorum? Nemo culpa placeat voluptate modi perspiciatis voluptatum hic obcaecati
+        asperiores at beatae!</p>
     </a>
   </div>
   <router-outlet></router-outlet>
