--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -82,11 +82,12 @@ mat-icon {
     opacity: 1;
     visibility: visible;
     margin: 15px;
-
     flex-direction: column;
-    left: 5px;
-    max-width: 50vw;
+    max-height: max-content;
+    max-width:30vw;
+    border-radius: 10px;
   }
+
   .menu__itens__link {
     transition: 0.9s;
     color: white;
@@ -95,27 +96,31 @@ mat-icon {
     display: flex;
     justify-content: center;
     border-bottom: 1px solid #ccc;
-    transition: .5s;
-    font-family: 'Poppyns',sans-serif;
-
+    transition: 0.5s;
+    font-family: "Poppyns", sans-serif;
+    border-radius: 2px;
   }
   .menu__itens__link:hover {
-     background-color: #f2af00;
-     opacity: 0.9;
+    background-color: #f2af00;
+    opacity: 0.9;
   }
   .menu__itens__link ul hr {
     width: 10px;
-
   }
+
   .menubar__itens__mobile ul li {
     display: flex;
-
+    width: 150px;
     position: relative;
-    left: -54px;
+    left: 12px;
+    border-radius: 37px 37px;
+    margin-top: 10px;
+    margin-left: 35px;
     flex-direction: column;
     font-weight: 400;
     font-size: 20px;
     background-color: #202020;
+    border-radius: 12px
   }
 
   mat-icon {
